tests/error/poly_errors/type_param_not_value.err
Error: Expected a value (at $FILE:8:8)
  | 
6 | @guppy
7 | def foo(x: T) -> None:
8 |     y = T
  |         ^ Expected a value, got type `T`

Guppy compilation failed due to 1 previous error
